--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "filesystem",
   "private": true,
   "devDependencies": {
+    "grunt": "^1.4.1",
+    "grunt-cache-breaker": "latest",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-nodeunit": "^4.0.0",
+    "grunt-contrib-qunit": "^5.1.1",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-ng-annotate": "latest",
+    "grunt-serve": "^0.1.6",
+    "load-grunt-tasks": "~3.5.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.3.1",
     "gulp-cache": "^0.2.10",
@@ -25,22 +39,14 @@
     "open": "0.0.5",
     "rimraf": "^2.4.0",
     "run-sequence": "^1.1.1",
-    "wiredep": "^2.2.2",
-    "grunt": "^1.4.1",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-serve": "0.1.6",
-    "grunt-cache-breaker": "latest",
-    "grunt-ng-annotate": "latest",
-    "grunt-contrib-jshint": "^3.2.0",
-    "grunt-contrib-nodeunit": "^4.0.0",
-    "grunt-contrib-qunit": "^5.1.1",
-    "grunt-contrib-watch": "^1.1.0"
+    "wiredep": "^2.2.2"
   },
+  "main": "Gruntfile.js",
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "connect": "~3.6.5",
+    "dot": "~1.1.2"
   }
 }
